--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "url": "https://github.com/tmycnw/stl-viewer/issues"
   },
   "homepage": "https://github.com/tmycnw/stl-viewer",
-  "devDependencies": {
+  "devDependencies": {},
+  "dependencies": {
+    "three": "^0.71.0"
   }
 }
