configuring karma and adding a dummy test for the main controller

--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
   "homepage": "https://github.com/tmycnw/stl-viewer",
   "devDependencies": {
     "jasmine": "^2.3.2",
-    "karma": "^0.13.8"
+    "jasmine-core": "^2.3.4",
+    "karma": "^0.13.8",
+    "karma-chrome-launcher": "^0.2.0",
+    "karma-jasmine": "^0.3.6"
   },
   "dependencies": {
     "angular": "^1.4.3",
