--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "angular-mocks": "^1.4.3",
     "grunt": "^0.4.5",
     "grunt-contrib-jshint": "^0.11.2",
+    "grunt-contrib-watch": "^0.6.1",
     "jasmine": "^2.3.2",
     "jasmine-core": "^2.3.4",
     "karma": "^0.13.8",
