--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "An STL file viewer",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "karma start",
+    "start": "electron ."
   },
   "repository": {
     "type": "git",
