--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "angular": "^1.4.3",
+    "karma-firefox-launcher": "^0.1.6",
     "stl-reader": "^2.1.1",
     "three": "^0.71.0"
   }
